--- a/src/base/test/BUILD.gn
+++ b/src/base/test/BUILD.gn
@@ -212,15 +212,15 @@ static_library("test_support") {
     deps += [ "//third_party/fuchsia-sdk/sdk:zx" ]
   }
 
-  if (is_linux) {
-    public_deps += [ ":fontconfig_util_linux" ]
-    data_deps = [
-      "//third_party/test_fonts",
-    ]
-    if (current_toolchain == host_toolchain) {
-      data_deps += [ ":do_generate_fontconfig_caches" ]
-    }
-  }
+  #if (is_linux) {
+  #  public_deps += [ ":fontconfig_util_linux" ]
+  #  data_deps = [
+  #    "//third_party/test_fonts",
+  #  ]
+  #  if (current_toolchain == host_toolchain) {
+  #    data_deps += [ ":do_generate_fontconfig_caches" ]
+  #  }
+  #}
 
   if (is_ios) {
     set_sources_assignment_filter([])
@@ -386,59 +386,59 @@ static_library("run_all_base_unittests") {
   ]
 }
 
-if (is_linux) {
-  source_set("fontconfig_util_linux") {
-    sources = [
-      "fontconfig_util_linux.cc",
-      "fontconfig_util_linux.h",
-    ]
-    data_deps = [
-      ":fonts_conf",
-    ]
-    deps = [
-      "//base",
-      "//third_party/fontconfig",
-    ]
-  }
-
-  copy("fonts_conf") {
-    sources = [
-      "fonts.conf",
-    ]
-    outputs = [
-      "${root_build_dir}/etc/fonts/{{source_file_part}}",
-    ]
-  }
-
-  if (current_toolchain == host_toolchain) {
-    executable("generate_fontconfig_caches") {
-      testonly = true
-      sources = [
-        "generate_fontconfig_caches.cc",
-      ]
-      deps = [
-        ":fontconfig_util_linux",
-        "//base",
-      ]
-    }
-
-    compiled_action("do_generate_fontconfig_caches") {
-      testonly = true
-      tool = ":generate_fontconfig_caches"
-
-      # The copied test fonts are inputs to generate_fontconfig_caches, so must
-      # be listed in deps, not data_deps (https://crbug.com/919422).
-      deps = [
-        "//third_party/test_fonts",
-      ]
-      args = []
-      outputs = [
-        "$root_out_dir/fontconfig_caches/fb5c91b2895aa445d23aebf7f9e2189c-le64.cache-7",
-        "$root_out_dir/test_fonts/.uuid",
-      ]
-    }
-  }
-}
+#if (is_linux) {
+#  source_set("fontconfig_util_linux") {
+#    sources = [
+#      "fontconfig_util_linux.cc",
+#      "fontconfig_util_linux.h",
+#    ]
+#    data_deps = [
+#      ":fonts_conf",
+#    ]
+#    deps = [
+#      "//base",
+#      "//third_party/fontconfig",
+#    ]
+#  }
+#
+#  copy("fonts_conf") {
+#    sources = [
+#      "fonts.conf",
+#    ]
+#    outputs = [
+#      "${root_build_dir}/etc/fonts/{{source_file_part}}",
+#    ]
+#  }
+#
+#  if (current_toolchain == host_toolchain) {
+#    executable("generate_fontconfig_caches") {
+#      testonly = true
+#      sources = [
+#        "generate_fontconfig_caches.cc",
+#      ]
+#      deps = [
+#        ":fontconfig_util_linux",
+#        "//base",
+#      ]
+#    }
+#
+#    compiled_action("do_generate_fontconfig_caches") {
+#      testonly = true
+#      tool = ":generate_fontconfig_caches"
+#
+#      # The copied test fonts are inputs to generate_fontconfig_caches, so must
+#      # be listed in deps, not data_deps (https://crbug.com/919422).
+#      deps = [
+#        "//third_party/test_fonts",
+#      ]
+#      args = []
+#      outputs = [
+#        "$root_out_dir/fontconfig_caches/fb5c91b2895aa445d23aebf7f9e2189c-le64.cache-7",
+#        "$root_out_dir/test_fonts/.uuid",
+#      ]
+#    }
+#  }
+#}
 
 if (is_fuchsia || is_linux) {
   shared_library("malloc_wrapper") {
