--- a/src/.gitignore
+++ b/src/.gitignore
@@ -309,3 +309,4 @@ vs-chromium-project.txt
 
 # Ignore the default results output directory for tools/run-swarmed.py
 /results
+third_party/llvm-build/Release+Asserts/bin/
